# startUp

./: .docs  .envExample  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/src/domain/app/dto/: project.py  user.py
backend/src/domain/app/exceptions/: base.py  project.py  user.py
backend/src/domain/app/usecases/project/: base.py  (+1 more)
backend/src/domain/common/dto/: mail.py  url.py
backend/src/domain/common/exceptions/: base.py
backend/src/domain/common/usecases/: base.py
backend/src/infrastructure/: settings.py
backend/src/infrastructure/database/: config.py  main.py  uow.py
backend/src/infrastructure/database/migrations/: env.py
backend/src/infrastructure/database/models/: __init__.py  base.py  project.py  user.py
backend/src/infrastructure/database/repositories/: __init__.py  base.py  token.py  user.py
backend/src/infrastructure/inmemory/: config.py  service.py
backend/src/infrastructure/inmemory_db/: config.py  main.py  service.py
backend/src/infrastructure/logging/: config.py  logger.py
backend/src/infrastructure/mailing/: config.py  services.py  utils.py
backend/src/infrastructure/secure/: pwd.py  services.py
backend/src/infrastructure/tasks/: config.py  main.py  tasks.py
backend/src/presentation/api/: main.py
backend/src/presentation/api/controllers/: __init__.py
backend/src/presentation/api/dependencies/: user.py
backend/src/presentation/api/di/: __init__.py  common.py  database.py  in_memory_db.py  mailing.py  services.py
backend/templates/emails/: activation.html
backend/tests/: README.md  conftest.py
backend/tests/test_proj/: conftest.py
backend/tests/test_proj/integration_tests/test_api/: test_project.py  test_user.py
backend/tests/test_proj/integration_tests/test_dependencies/: test_user.py
backend/tests/test_proj/unit_tests/: conftest.py
(+47 files in other folders)
